--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
               <h2>Agilis Printer Tester</h2>
             </ion-label>
           </ion-item>
- 
-          <ion-menu-toggle autoHide="false"> 
+
+          <ion-menu-toggle autoHide="false">
             <ion-item routerLink="/home">
               <ion-icon slot="start" name="list" color="secondary"></ion-icon>
               <ion-label class="menu-item">Texto/Imagen/QR/Barcode</ion-label>
@@ -20,6 +20,12 @@
             <ion-item routerLink="/foto">
               <ion-icon slot="start" name="camera" color="secondary"></ion-icon>
               <ion-label class="menu-item">Capturas</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+          <ion-menu-toggle autoHide="false">
+            <ion-item routerLink="/youtube">
+              <ion-icon slot="start" name="logo-youtube" color="secondary"></ion-icon>
+              <ion-label class="menu-item">YouTube API</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <!-- <ion-menu-toggle autoHide="false">
@@ -34,13 +40,13 @@
               <ion-label class="menu-item">Configuración</ion-label>
             </ion-item>
           </ion-menu-toggle> -->
-      
+
         </ion-list>
-        
+
         <ion-menu-toggle autoHide="false">
-          <ion-button expand="full" (click)="closeApp()" >Salir</ion-button>
+          <ion-button expand="full" (click)="closeApp()">Salir</ion-button>
         </ion-menu-toggle>
-        
+
         <ion-item lines="none" class="position-bottom">
           <ion-label>
             <h2>2019 - SISORG S.R.L</h2>
@@ -48,7 +54,7 @@
         </ion-item>
       </ion-content>
     </ion-menu>
-    
+
     <ion-router-outlet id="main"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
