Conection to helpDeskVideo layer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,12 @@
               <ion-label class="menu-item">YouTube API</ion-label>
             </ion-item>
           </ion-menu-toggle>
+          <ion-menu-toggle autoHide="false">
+            <ion-item routerLink="/helpdeskvideos">
+              <ion-icon slot="start" name="videocam" color="secondary"></ion-icon>
+              <ion-label class="menu-item">HelpDeskVideos API</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
           <!-- <ion-menu-toggle autoHide="false">
             <ion-item routerLink="/form-test" [disabled]="true">
               <ion-icon slot="start" name="filing" color="secondary"></ion-icon>
